# mcps

./: README.md
harbor-mcp/: .env.example  .gitignore  .mcp.json  Makefile  README.md  pyproject.toml
harbor-mcp/.github/workflows/: ci.yml  eval-safety.yml
harbor-mcp/evals/: README.md  _hublib.sh  check_reward.py  run_eval_safety.sh  run_evals.sh
harbor-mcp/evals/check-published-task/: instruction.md  task.toml
harbor-mcp/evals/check-published-task/environment/: Dockerfile
harbor-mcp/evals/check-published-task/tests/: test.sh
harbor-mcp/evals/delete-job/: instruction.md  task.toml
harbor-mcp/evals/fetch-job-results/: instruction.md  task.toml
harbor-mcp/evals/hello-mcp/: task.toml
harbor-mcp/evals/hello-world/: task.toml
harbor-mcp/evals/read-job/: instruction.md  task.toml
harbor-mcp/evals/verify-upload/: instruction.md  task.toml
harbor-mcp/scripts/: run_evals.sh
harbor-mcp/src/harbor_mcp/: server.py
harbor-mcp/tests/e2e/: test_hub_roundtrip.py
harbor-mcp/tests/integration/: test_publish_roundtrip.py  test_server_stdio.py
harbor-mcp/tests/unit/: test_base.py  test_errors.py  test_tools_jobs.py  test_tools_registry.py  test_tools_writes.py
tastytrade-mcp/: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  pyproject.toml
tastytrade-mcp/.github/workflows/: ci.yml
tastytrade-mcp/benchmark/: README.md  generate_tasks.py  job.yaml
tastytrade-mcp/benchmark/environment/: Dockerfile
tastytrade-mcp/docs/: design.md
tastytrade-mcp/docs/design/: 2026-06-mcp-v2.md  2026-06-server-redesign.md
tastytrade-mcp/evals/: README.md  __init__.py  generate_tasks.py  job.yaml  run.py  validate_local.sh
tastytrade-mcp/evals/environment/: Dockerfile
tastytrade-mcp/evaluation/: README.md  __init__.py  run.py
tastytrade-mcp/evaluation/cases/: 04_transaction_fees.json
tastytrade-mcp/evaluation/harbor/: README.md  generate_tasks.py  job.yaml
tastytrade-mcp/src/: client.py  config.py  server.py
tastytrade-mcp/src/infra/: __init__.py  cache.py  correction.py  errors.py  logging.py  pagination.py
tastytrade-mcp/src/schemas/: __init__.py  chain.py  common.py  orders.py
tastytrade-mcp/src/shaping/: __init__.py  chain.py  market_data.py  orders.py  portfolio.py  summarize.py  transactions.py
tastytrade-mcp/src/tools/: __init__.py  accounts.py  base.py  market_data.py  options.py  orders.py  transactions.py  watchlists.py
tastytrade-mcp/tests/integration/: conftest.py  test_end_to_end.py
tastytrade-mcp/tests/unit/: conftest.py  test_client.py  test_infra.py  test_misuse_evals.py  test_schemas.py  test_server.py  test_shaping.py  test_tools.py
(+149 files in other folders)
