[project]
name = "harbor-mcp"
version = "0.1.0"
description = "MCP server for the Harbor hub: verify uploads, fetch job results, publish packages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Pinned exactly: we import harbor internals (hub, upload, publisher, db),
    # which are not a stable public API. Bump deliberately.
    "harbor==0.18.0",
    "mcp>=1.2",
]

[project.optional-dependencies]
# Only needed to run tests/evals with HARBOR_TEST_ENV=modal. Kept out of the
# base install so read-only use stays lean. Install with: uv sync --extra modal.
modal = ["harbor[modal]==0.18.0"]

[project.scripts]
harbor-mcp = "harbor_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=5",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harbor_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: talks to the live Harbor hub; needs HARBOR_API_KEY",
    "e2e: runs harbor jobs on HARBOR_TEST_ENV (docker|modal); needs HARBOR_API_KEY",
]
addopts = ["-v", "--tb=short", "--strict-markers", "--strict-config", "-m", "not integration and not e2e"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["harbor_mcp"]
