[project]
name = "tastytrade-mcp"
version = "0.1.0"
description = "MCP server for TastyTrade brokerage API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.0",
    "pytest-xdist>=3.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (deselect with '-m \"not unit\"')",
    "integration: Integration tests (deselect with '-m \"not integration\"')",
]
addopts = "-v"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = { "src" = "" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
